--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,14 @@ __pycache__
 
 # dependencies
 node_modules
-*/.pnp
-.pnp.js
+*.pnp
+*.pnp.js
 
 # testing
-*/coverage
+coverage
 
 # production
-*/build
+build
 
 # misc
 .DS_Store
